++++
News
++++

.. contents:: Contents:
   :backlinks: none

.. _start:

SQLObject 0.7.2
===============

Features & Interface
--------------------

* sqlbuilder.Select now supports JOINs exactly like SQLObject.select.

Bug Fixes
---------

* Fixed a number of unicode-related problems with newer MySQLdb.

* If the DB API driver returns timedelta instead of time (MySQLdb does
  this) it is converted to time; but if the timedelta has days an exception
  is raised.

* Fixed a number of bugs in InheritableSQLObject related to foreign keys.

* Fixed a bug in InheritableSQLObject related to the order of tableRegistry
  dictionary.

* A bug fix that allows to use SQLObject with DateTime from Zope.

SQLObject 0.7.1
===============

Released 25 Sep 2006.

Features & Interface
--------------------

* Added support for psycopg2_

.. _psycopg2: http://initd.org/projects/psycopg2

* Added support for MSSQL.

* Added ``TimeCol``.

* ``RelatedJoin`` and ``SQLRelatedJoin`` objects have a
  ``createRelatedTable`` keyword argument (default ``True``).  If
  ``False``, then the related table won't be automatically created;
  instead you must manually create it (e.g., with explicit SQLObject
  classes for the joins).

* Implemented ``RLIKE`` (regular expression LIKE).

* Moved _idSequence to sqlmeta.idSequence.

Small Features
--------------

* Select over RelatedJoin.

* SQLite foreign keys.

* Postgres DB URIs with a non-default path to unix socket.

* Allow the use of foreign keys in selects.

* Implemented addColumn() for SQLite.

* With PySQLite2 use encode()/decode() from PySQLite1 for BLOBCol if available; else use base64.

Bug Fixes
---------

* Fixed a longstanding problem with UnicodeCol - at last you can use unicode
  strings in .select() and .selectBy() queries. There are some limitations,
  though; see the description of the UnicodeCol_.

.. _UnicodeCol: SQLObject.html#column-types

* Cull patch (clear cache).

* .destroySelf() inside a transaction.
