@@ -15,6 +15,8 @@ Features & Interface
 
 * sqlbuilder.Select now supports JOINs exactly like SQLObject.select.
 
+* destroySelf() removes the object from related joins.
+
 Bug Fixes
 ---------
 
